handle missing values by deleting rows

--- a/EDA/data/0_handle_missing_values.ipynb
+++ b/EDA/data/0_handle_missing_values.ipynb
@@ -378,13 +378,77 @@
    "id": "576b9f21",
    "metadata": {},
    "source": [
-    "Hnadle missing values"
+    "3. Handle missing values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "b0f2d701",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_cp = df.copy()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "44b3ab0a",
+   "metadata": {},
+   "source": [
+    "3.1 Deletion missing values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "7d30e660",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_cp = df_cp.dropna(axis=0) # This means check each row and drop if atleast 1 null value present. axis = 1 means it is done to columns, columnwise"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "77fa6af2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RowNumber          0\n",
+       "CustomerId         0\n",
+       "Firstname          0\n",
+       "Lastname           0\n",
+       "CreditScore        0\n",
+       "Geography          0\n",
+       "Gender             0\n",
+       "Age                0\n",
+       "Tenure             0\n",
+       "Balance            0\n",
+       "NumOfProducts      0\n",
+       "HasCrCard          0\n",
+       "IsActiveMember     0\n",
+       "EstimatedSalary    0\n",
+       "Exited             0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_cp.isnull().sum()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0f2d701",
+   "id": "c81d4514",
    "metadata": {},
    "outputs": [],
    "source": []
