impute gender with use of groq

--- a/EDA/data/0_handle_missing_values.ipynb
+++ b/EDA/data/0_handle_missing_values.ipynb
@@ -948,7 +948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 51,
    "id": "9051d3cf",
    "metadata": {},
    "outputs": [
@@ -958,7 +958,7 @@
        "'Male'"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -969,8 +969,360 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "id": "85acb5d6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_cp2 = df.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "a5072398",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Firstname</th>\n",
+       "      <th>Lastname</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>35</th>\n",
+       "      <td>Eva</td>\n",
+       "      <td>Wilson</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36</th>\n",
+       "      <td>Ivy</td>\n",
+       "      <td>Johnson</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39</th>\n",
+       "      <td>David</td>\n",
+       "      <td>Taylor</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>108</th>\n",
+       "      <td>Frank</td>\n",
+       "      <td>Davis</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>121</th>\n",
+       "      <td>Jack</td>\n",
+       "      <td>Wilson</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9822</th>\n",
+       "      <td>Grace</td>\n",
+       "      <td>Wilson</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9896</th>\n",
+       "      <td>Hank</td>\n",
+       "      <td>Johnson</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9920</th>\n",
+       "      <td>Grace</td>\n",
+       "      <td>Jones</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9930</th>\n",
+       "      <td>Alice</td>\n",
+       "      <td>Davis</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9965</th>\n",
+       "      <td>Jack</td>\n",
+       "      <td>Brown</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>108 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Firstname Lastname\n",
+       "35         Eva   Wilson\n",
+       "36         Ivy  Johnson\n",
+       "39       David   Taylor\n",
+       "108      Frank    Davis\n",
+       "121       Jack   Wilson\n",
+       "...        ...      ...\n",
+       "9822     Grace   Wilson\n",
+       "9896      Hank  Johnson\n",
+       "9920     Grace    Jones\n",
+       "9930     Alice    Davis\n",
+       "9965      Jack    Brown\n",
+       "\n",
+       "[108 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_cp2.loc[df_cp2['Gender'].isnull(), ('Firstname', 'Lastname')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "bf945b7b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Eva Wilson is predicted as Female\n",
+      "Ivy Johnson is predicted as Female\n",
+      "David Taylor is predicted as Male\n",
+      "Frank Davis is predicted as Male\n",
+      "Jack Wilson is predicted as Male\n",
+      "David Miller is predicted as Male\n",
+      "Eva Taylor is predicted as Female\n",
+      "Grace Johnson is predicted as Female\n",
+      "Hank Miller is predicted as Male\n",
+      "Frank Williams is predicted as Male\n",
+      "Alice Davis is predicted as Female\n",
+      "Alice Brown is predicted as Female\n",
+      "Alice Garcia is predicted as Female\n",
+      "Bob Jones is predicted as Male\n",
+      "Jack Davis is predicted as Male\n",
+      "Grace Williams is predicted as Female\n",
+      "Ivy Jones is predicted as Female\n",
+      "David Smith is predicted as Male\n",
+      "David Miller is predicted as Male\n",
+      "Eva Williams is predicted as Female\n",
+      "Frank Garcia is predicted as Male\n",
+      "Alice Wilson is predicted as Female\n",
+      "Carol Jones is predicted as Female\n",
+      "Hank Davis is predicted as Male\n",
+      "Ivy Williams is predicted as Female\n",
+      "Hank Smith is predicted as Male\n",
+      "Ivy Jones is predicted as Female\n",
+      "Alice Brown is predicted as Female\n",
+      "Eva Taylor is predicted as Female\n",
+      "Carol Williams is predicted as Female\n",
+      "Jack Williams is predicted as Male\n",
+      "Ivy Brown is predicted as Female\n",
+      "David Brown is predicted as Male\n",
+      "Bob Smith is predicted as Male\n",
+      "Frank Wilson is predicted as Male\n",
+      "Bob Williams is predicted as Male\n",
+      "Ivy Johnson is predicted as Female\n",
+      "Jack Taylor is predicted as Male\n",
+      "David Davis is predicted as Male\n",
+      "David Garcia is predicted as Male\n",
+      "Eva Brown is predicted as Female\n",
+      "Frank Wilson is predicted as Male\n",
+      "Jack Davis is predicted as Male\n",
+      "Eva Miller is predicted as Female\n",
+      "Grace Williams is predicted as Female\n",
+      "Bob Jones is predicted as Male\n",
+      "David Taylor is predicted as Male\n",
+      "Frank Smith is predicted as Male\n",
+      "Ivy Jones is predicted as Female\n",
+      "David Williams is predicted as Male\n",
+      "Grace Jones is predicted as Female\n",
+      "Grace Miller is predicted as Female\n",
+      "Bob Taylor is predicted as Male\n",
+      "Grace Miller is predicted as Female\n",
+      "Bob Taylor is predicted as Male\n",
+      "Hank Jones is predicted as Male\n",
+      "Hank Wilson is predicted as Male\n",
+      "Grace Smith is predicted as Female\n",
+      "Bob Johnson is predicted as Male\n",
+      "Hank Brown is predicted as Male\n",
+      "Carol Jones is predicted as Female\n",
+      "Hank Williams is predicted as Male\n",
+      "Hank Miller is predicted as Male\n",
+      "Frank Davis is predicted as Male\n",
+      "Ivy Wilson is predicted as Female\n",
+      "Hank Jones is predicted as Male\n",
+      "Bob Jones is predicted as Male\n",
+      "Frank Brown is predicted as Male\n",
+      "Frank Smith is predicted as Male\n",
+      "Bob Taylor is predicted as Male\n",
+      "Alice Johnson is predicted as Female\n",
+      "Ivy Wilson is predicted as Female\n",
+      "Grace Brown is predicted as Female\n",
+      "Eva Davis is predicted as Female\n",
+      "Eva Wilson is predicted as Female\n",
+      "Frank Miller is predicted as Male\n",
+      "David Miller is predicted as Male\n",
+      "Carol Brown is predicted as Female\n",
+      "Eva Miller is predicted as Female\n",
+      "Alice Garcia is predicted as Female\n",
+      "Carol Davis is predicted as Female\n",
+      "Frank Smith is predicted as Male\n",
+      "Ivy Miller is predicted as Female\n",
+      "Bob Garcia is predicted as Male\n",
+      "Alice Garcia is predicted as Female\n",
+      "Frank Smith is predicted as Male\n",
+      "Grace Johnson is predicted as Female\n",
+      "Eva Garcia is predicted as Female\n",
+      "Alice Jones is predicted as Female\n",
+      "David Wilson is predicted as Male\n",
+      "Ivy Garcia is predicted as Female\n",
+      "Frank Wilson is predicted as Male\n",
+      "Frank Wilson is predicted as Male\n",
+      "Bob Williams is predicted as Male\n",
+      "Ivy Johnson is predicted as Female\n",
+      "David Brown is predicted as Male\n",
+      "Ivy Miller is predicted as Female\n",
+      "Carol Smith is predicted as Female\n",
+      "David Williams is predicted as Male\n",
+      "Hank Williams is predicted as Male\n",
+      "David Brown is predicted as Male\n",
+      "Carol Garcia is predicted as Female\n",
+      "Hank Miller is predicted as Male\n",
+      "Grace Wilson is predicted as Female\n",
+      "Hank Johnson is predicted as Male\n",
+      "Grace Jones is predicted as Female\n",
+      "Alice Davis is predicted as Female\n",
+      "Jack Brown is predicted as Male\n"
+     ]
+    }
+   ],
+   "source": [
+    "missing_gender_index = df_impute['Gender'].isnull()\n",
+    "for idx in df_impute[missing_gender_index].index:\n",
+    "    firstname = df_impute.loc[idx, 'Firstname']\n",
+    "    lastname = df_impute.loc[idx, 'Lastname']\n",
+    "\n",
+    "    gender = predict_gender(firstname, lastname)\n",
+    "\n",
+    "    if gender:\n",
+    "        df_impute.loc[idx, 'Gender'] = gender\n",
+    "        print(f\"{firstname} {lastname} is predicted as {gender}\")\n",
+    "    else:\n",
+    "        print(f\"{firstname} and {lastname} could not be predicted\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "ada93782",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RowNumber          0\n",
+       "CustomerId         0\n",
+       "Firstname          7\n",
+       "Lastname           6\n",
+       "CreditScore        0\n",
+       "Geography          0\n",
+       "Gender             0\n",
+       "Age                0\n",
+       "Tenure             0\n",
+       "Balance            0\n",
+       "NumOfProducts      0\n",
+       "HasCrCard          0\n",
+       "IsActiveMember     0\n",
+       "EstimatedSalary    0\n",
+       "Exited             0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_impute.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "1cac6089",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_impute = df_impute.drop(columns=['Firstname', 'Lastname', 'RowNumber','CustomerId']) # drop the columns that are not needed anymore"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "bb71be21",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "CreditScore        0\n",
+       "Geography          0\n",
+       "Gender             0\n",
+       "Age                0\n",
+       "Tenure             0\n",
+       "Balance            0\n",
+       "NumOfProducts      0\n",
+       "HasCrCard          0\n",
+       "IsActiveMember     0\n",
+       "EstimatedSalary    0\n",
+       "Exited             0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_impute.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "a9171001",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_impute.to_csv('processed/CEHHbInToW_imputed.csv', index=False) # save the imputed dataframe to a csv file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7b26f05c",
    "metadata": {},
    "outputs": [],
    "source": []
