put numof Products as categorical

--- a/EDA/data/1_handle_outliers.ipynb
+++ b/EDA/data/1_handle_outliers.ipynb
@@ -259,14 +259,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "85ac8af1",
+   "cell_type": "markdown",
+   "id": "234c4fd3",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#Here we can see numOfProducts is a categorical variable, so we can convert it to categorical variable\n",
-    "#Because it has only 3 unique values. they should be integers. so exactly vlaues are 1,2,3."
+    "- Descrete values can be categorical. We have to look into distributions and figure out what whether that numerical value column is actually numerical or categorical??  Sometimes Genders also represents as 0 and 1s. But that is categorical"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "841232c0",
+   "metadata": {},
+   "source": [
+    "- Here we can see numOfProducts is a categorical variable, so we can convert it to categorical variable\n",
+    "Because it has only 3 unique values. they should be integers. so exactly vlaues are 1,2,3."
    ]
   },
   {
@@ -275,7 +281,9 @@
    "id": "a9a7a93c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "fig , axes = plt.subplots(1,5 , figsize=(20, 5))\n"
+   ]
   }
  ],
  "metadata": {
