find outliers with 3 sigma rule

--- a/EDA/data/1_handle_outliers.ipynb
+++ b/EDA/data/1_handle_outliers.ipynb
@@ -340,9 +340,36 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1e3e83dc",
+   "metadata": {},
+   "source": [
+    "3. empirical rule / 3- sigma rule"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "d8aa8e39",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def find_anomaly(data):\n",
+    "    mean = data.mean()\n",
+    "    std = data.std()\n",
+    "\n",
+    "    upper_limit = mean + 3 * std\n",
+    "    lower_limit = mean - 3 * std\n",
+    "\n",
+    "    return (data < lower_limit) | (data > upper_limit)\n",
+    "\n",
+    "numerical_columns = ['CreditScore', 'Age', 'Tenure', 'Balance', 'EstimatedSalary']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bc819f65",
    "metadata": {},
    "outputs": [],
    "source": []
