--- a/EDA/data/1_handle_outliers.ipynb
+++ b/EDA/data/1_handle_outliers.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "2973c80e",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "cf2a0631",
    "metadata": {},
    "outputs": [
@@ -150,7 +150,7 @@
        "4          1               1         79084.10       0  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "ffe448f5",
    "metadata": {},
    "outputs": [
@@ -183,7 +183,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "5804664a",
    "metadata": {},
    "outputs": [],
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "6841c55f",
    "metadata": {},
    "outputs": [],
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "09b55940",
    "metadata": {},
    "outputs": [
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "id": "a9a7a93c",
    "metadata": {},
    "outputs": [
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "id": "b8743120",
    "metadata": {},
    "outputs": [
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "d8aa8e39",
    "metadata": {},
    "outputs": [],
@@ -368,8 +368,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "bc819f65",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Anomalies in CreditScore: 8\n",
+      "Anomalies in Age: 144\n",
+      "Anomalies in Tenure: 0\n",
+      "Anomalies in Balance: 0\n",
+      "Anomalies in EstimatedSalary: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "for col in numerical_columns:\n",
+    "    anomalies = find_anomaly(df[col]).sum()\n",
+    "    print(f'Anomalies in {col}: {anomalies}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bf054c86",
+   "metadata": {},
+   "source": [
+    "4. IQR method"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "6a386bbf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def find_anomaly_iqr(data):\n",
+    "    q1 = np.percentile(data, 25)\n",
+    "    q3 = np.percentile(data, 75)\n",
+    "    iqr = q3 - q1\n",
+    "\n",
+    "    lower_limit = q1 - 1.5 * iqr\n",
+    "    upper_limit = q3 + 1.5 * iqr\n",
+    "\n",
+    "    return (data < lower_limit) | (data > upper_limit)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "4398502d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Anomalies in CreditScore using IQR: 15\n",
+      "Anomalies in Age using IQR: 501\n",
+      "Anomalies in Tenure using IQR: 0\n",
+      "Anomalies in Balance using IQR: 0\n",
+      "Anomalies in EstimatedSalary using IQR: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "for col in numerical_columns:\n",
+    "    anomalies = find_anomaly_iqr(df[col]).sum()\n",
+    "    print(f'Anomalies in {col} using IQR: {anomalies}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "92bc0600",
    "metadata": {},
    "outputs": [],
    "source": []
