--- a/EDA/data/2_feature_bining.ipynb
+++ b/EDA/data/2_feature_bining.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "3034fdeb",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "fba3eb29",
    "metadata": {},
    "outputs": [
@@ -157,7 +157,7 @@
        "4          1               1         79084.10       0  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,8 +169,253 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "5032c3a8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def creditScoreIntoBins(score):\n",
+    "    if 350<score<580:\n",
+    "        return 'Poor'\n",
+    "    elif 580<score<670:\n",
+    "        return 'Fair'\n",
+    "    elif 670<score<740:\n",
+    "        return 'Good'\n",
+    "    elif 740<score<800:\n",
+    "        return 'Very Good'\n",
+    "    elif 800<score<850:\n",
+    "        return 'Excellent'\n",
+    "    else:\n",
+    "        assert True, f'Invalid credit score: {score}'\n",
+    "\n",
+    "df['credit Score Bins'] = df['CreditScore'].apply(creditScoreIntoBins)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "9919585b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Geography</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Tenure</th>\n",
+       "      <th>Balance</th>\n",
+       "      <th>NumOfProducts</th>\n",
+       "      <th>HasCrCard</th>\n",
+       "      <th>IsActiveMember</th>\n",
+       "      <th>EstimatedSalary</th>\n",
+       "      <th>Exited</th>\n",
+       "      <th>credit Score Bins</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>France</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>42.000000</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>101348.88</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Fair</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Spain</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>41.000000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>83807.86</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>112542.58</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Fair</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>France</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>42.000000</td>\n",
+       "      <td>8</td>\n",
+       "      <td>159660.80</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>113931.57</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Poor</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>France</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>38.912128</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>93826.63</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Good</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Spain</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>43.000000</td>\n",
+       "      <td>2</td>\n",
+       "      <td>125510.82</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>79084.10</td>\n",
+       "      <td>0</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Spain</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>44.000000</td>\n",
+       "      <td>8</td>\n",
+       "      <td>113755.78</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>149756.71</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Fair</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>France</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>50.000000</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>10062.80</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Excellent</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Germany</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>29.000000</td>\n",
+       "      <td>4</td>\n",
+       "      <td>115046.74</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>119346.88</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Poor</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>France</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>44.000000</td>\n",
+       "      <td>4</td>\n",
+       "      <td>142051.07</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>74940.50</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Poor</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>France</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>27.000000</td>\n",
+       "      <td>2</td>\n",
+       "      <td>134603.88</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>71725.73</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Good</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Geography  Gender        Age  Tenure    Balance  NumOfProducts  HasCrCard  \\\n",
+       "0    France  Female  42.000000       2       0.00              1          1   \n",
+       "1     Spain  Female  41.000000       1   83807.86              1          0   \n",
+       "2    France  Female  42.000000       8  159660.80              3          1   \n",
+       "3    France  Female  38.912128       1       0.00              2          0   \n",
+       "4     Spain  Female  43.000000       2  125510.82              1          1   \n",
+       "5     Spain    Male  44.000000       8  113755.78              2          1   \n",
+       "6    France    Male  50.000000       7       0.00              2          1   \n",
+       "7   Germany  Female  29.000000       4  115046.74              4          1   \n",
+       "8    France    Male  44.000000       4  142051.07              2          0   \n",
+       "9    France    Male  27.000000       2  134603.88              1          1   \n",
+       "\n",
+       "   IsActiveMember  EstimatedSalary  Exited credit Score Bins  \n",
+       "0               1        101348.88       1              Fair  \n",
+       "1               1        112542.58       0              Fair  \n",
+       "2               0        113931.57       1              Poor  \n",
+       "3               0         93826.63       0              Good  \n",
+       "4               1         79084.10       0              None  \n",
+       "5               0        149756.71       1              Fair  \n",
+       "6               1         10062.80       0         Excellent  \n",
+       "7               0        119346.88       1              Poor  \n",
+       "8               1         74940.50       0              Poor  \n",
+       "9               1         71725.73       0              Good  "
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "del df['CreditScore']\n",
+    "df.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a4978ecb",
    "metadata": {},
    "outputs": [],
    "source": []
