encoded nominal variables

--- a/EDA/data/2_feature_bining.ipynb
+++ b/EDA/data/2_feature_bining.ipynb
@@ -414,8 +414,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "a4978ecb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('processed/CEHHbInToW_feature_binning.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3b4b23d5",
    "metadata": {},
    "outputs": [],
    "source": []
