encoded ordinal columns

--- a/EDA/data/2_feature_bining.ipynb
+++ b/EDA/data/2_feature_bining.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "3034fdeb",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "fba3eb29",
    "metadata": {},
    "outputs": [
@@ -157,7 +157,7 @@
        "4          1               1         79084.10       0  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "5032c3a8",
    "metadata": {},
    "outputs": [],
@@ -183,7 +183,7 @@
     "        return 'Good'\n",
     "    elif 740<score<800:\n",
     "        return 'Very Good'\n",
-    "    elif 800<score<850:\n",
+    "    elif 800<score<=850:\n",
     "        return 'Excellent'\n",
     "    else:\n",
     "        assert True, f'Invalid credit score: {score}'\n",
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "9919585b",
    "metadata": {},
    "outputs": [
@@ -300,7 +300,7 @@
        "      <td>1</td>\n",
        "      <td>79084.10</td>\n",
        "      <td>0</td>\n",
-       "      <td>None</td>\n",
+       "      <td>Excellent</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -394,7 +394,7 @@
        "1               1        112542.58       0              Fair  \n",
        "2               0        113931.57       1              Poor  \n",
        "3               0         93826.63       0              Good  \n",
-       "4               1         79084.10       0              None  \n",
+       "4               1         79084.10       0         Excellent  \n",
        "5               0        149756.71       1              Fair  \n",
        "6               1         10062.80       0         Excellent  \n",
        "7               0        119346.88       1              Poor  \n",
@@ -402,7 +402,7 @@
        "9               1         71725.73       0              Good  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "a4978ecb",
    "metadata": {},
    "outputs": [],
