feature encoded dataset

--- a/EDA/data/3_feature_encoding.ipynb
+++ b/EDA/data/3_feature_encoding.ipynb
@@ -837,8 +837,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "99c74ae2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_encoded.to_csv('processed/CEHHbInToW_feature_encoding.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fcc2d842",
    "metadata": {},
    "outputs": [],
    "source": []
