--- a/EDA/data/5_handle_class_imbalance.ipynb
+++ b/EDA/data/5_handle_class_imbalance.ipynb
@@ -301,8 +301,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "6bb2a771",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = df.drop(columns=['Exited'])\n",
+    "y = df['Exited']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "972926c6",
    "metadata": {},
    "outputs": [],
    "source": []
