bug fix for missing value

--- a/EDA/data/2_feature_bining.ipynb
+++ b/EDA/data/2_feature_bining.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "id": "3034fdeb",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "id": "fba3eb29",
    "metadata": {},
    "outputs": [
@@ -157,7 +157,7 @@
        "4          1               1         79084.10       0  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,23 +169,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "id": "5032c3a8",
    "metadata": {},
    "outputs": [],
    "source": [
     "def creditScoreIntoBins(score):\n",
-    "    if 350<score<580:\n",
+    "    if 350<=score<=580:\n",
     "        return 'Poor'\n",
-    "    elif 580<score<670:\n",
+    "    elif 580<score<=670:\n",
     "        return 'Fair'\n",
-    "    elif 670<score<740:\n",
+    "    elif 670<score<=740:\n",
     "        return 'Good'\n",
-    "    elif 740<score<800:\n",
+    "    elif 740<score<=800:\n",
     "        return 'Very Good'\n",
     "    elif 800<score<=850:\n",
     "        return 'Excellent'\n",
     "    else:\n",
+    "        print(f'Invalid credit score: {score}')\n",
     "        assert True, f'Invalid credit score: {score}'\n",
     "\n",
     "df['credit Score Bins'] = df['CreditScore'].apply(creditScoreIntoBins)\n"
@@ -193,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "id": "9919585b",
    "metadata": {},
    "outputs": [
@@ -402,7 +403,7 @@
        "9               1         71725.73       0              Good  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -414,7 +415,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
+   "id": "10dfb38c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Geography            0\n",
+       "Gender               0\n",
+       "Age                  0\n",
+       "Tenure               0\n",
+       "Balance              0\n",
+       "NumOfProducts        0\n",
+       "HasCrCard            0\n",
+       "IsActiveMember       0\n",
+       "EstimatedSalary      0\n",
+       "Exited               0\n",
+       "credit Score Bins    0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "id": "a4978ecb",
    "metadata": {},
    "outputs": [],
