save datasets to artifacts

--- a/EDA/data/5_handle_class_imbalance.ipynb
+++ b/EDA/data/5_handle_class_imbalance.ipynb
@@ -578,8 +578,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "9dec89c3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.savez('../../artifacts/X_train_resampled.npz', X_train_resampled)\n",
+    "np.savez('../../artifacts/y_train_resampled.npz', y_train_resampled)\n",
+    "np.savez('../../artifacts/X_test.npz', X_test)\n",
+    "np.savez('../../artifacts/y_test.npz', y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b530260f",
    "metadata": {},
    "outputs": [],
    "source": []
