--- a/1_base_model_training.ipynb
+++ b/1_base_model_training.ipynb
@@ -616,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "d7aa8d8b",
    "metadata": {},
    "outputs": [
@@ -637,7 +637,8 @@
     "plt.title('Confusion Matrix')\n",
     "plt.xlabel('Predicted')\n",
     "plt.ylabel('Actual')\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n"
    ]
   },
   {
