--- a/2_kfold_validation.ipynb
+++ b/2_kfold_validation.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "53888cc9",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "2a9180e9",
    "metadata": {},
    "outputs": [],
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "e75372d1",
    "metadata": {},
    "outputs": [],
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "c1e62940",
    "metadata": {},
    "outputs": [
@@ -117,22 +117,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "da65d6af",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'fit_time': array([0.01840806, 0.0152998 , 0.01600099, 0.01538992, 0.01471996,\n",
-       "        0.01429391]),\n",
-       " 'score_time': array([0.00213099, 0.0022471 , 0.00201082, 0.0018959 , 0.00181985,\n",
-       "        0.00180411]),\n",
+       "{'fit_time': array([0.01949501, 0.01486802, 0.01576996, 0.01490712, 0.01422191,\n",
+       "        0.01451492]),\n",
+       " 'score_time': array([0.00208592, 0.00190091, 0.00185108, 0.002002  , 0.00194812,\n",
+       "        0.00186586]),\n",
        " 'test_score': array([0.73892554, 0.71936759, 0.72466539, 0.7018723 , 0.74772618,\n",
        "        0.72501196])}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "40ecf593",
    "metadata": {},
    "outputs": [],
